--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -67,10 +67,10 @@ $indent:       24px;
         color: #8a8;
         font-style: italic;
       }
-      &._wide ._content {
+      &:not(._narrow) ._content {
         @include adaptive-width(200px,325px);
       }
-      &:not(._wide) ._content {
+      &._narrow ._content {
         @include adaptive-width(75px,200px);
       }
     }
