--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -387,10 +387,22 @@ div._systemStatus {
         > input {
           margin-right: 8px;
         }
-        > button {
+        > button:first-child {
           background: #33b1ff;
           color:      white;
           border:     4px solid #33b1ff;
+        }
+        > button:nth-child(2) {
+          float:      right;
+          border:     4px solid rgb(230, 46, 46);
+          background: white;
+          color:      rgb(230, 46, 46);
+          opacity:    .1;
+          &:hover {
+            background: rgb(230, 46, 46);
+            color:      white;
+            opacity: 1;
+          }
         }
         > ._errorMessage {
           font-size: 20px;
@@ -501,7 +513,7 @@ div._systemStatus {
         > ._line > ._labeledField > ._readOnlyField {
           padding: 4px;
           border: solid 0.1px #ddd;
-          color: #444;
+          color: #999;
         }
         >._configTypeLine {
           margin-top: 6px;
@@ -587,6 +599,18 @@ div._systemStatus {
           }
         }
       }
+      &._confirmProfileDelete {
+        > div:first-child {color: rgb(230, 46, 46)}
+        > div > button {
+          border: 4px solid rgb(230, 46, 46);
+          &:first-child {
+            background: rgb(230, 46, 46);
+          }
+          &:not(:first-child) {
+            color: rgb(230, 46, 46);
+          }
+        }
+      }
     }
   }
 }
@@ -642,9 +666,10 @@ body > ._whiteout {
       @include popup-content();
       padding: 28px;
       > div:first-child {
+        text-align: center;
         color:  #33b1ff;
         font-size: 32px;
-        margin-bottom: 16px;
+        margin-bottom: 32px;
       }
       > div:not(:first-child) {
         color: #aaa;
@@ -674,15 +699,17 @@ body > ._whiteout {
       }
       &:not(._miniLogin) > form {
         margin-top: 24px;
-        text-align: center;
         > input {
+          margin: 0px 6px;
           display: block;
           font-size: 20px;
           color: #555;
           margin-bottom: 12px;
+          width: 270px;
         }
         > ._loginButtons {
-          margin-top: 24px;
+          margin-top: 32px;
+          text-align: center;
           > button {
             border:     4px solid #33b1ff;
             font-size:  16px;
@@ -701,12 +728,14 @@ body > ._whiteout {
           }
         }
         > ._loginError {
-          font-size: 20px;
+          font-size:     16px;
+          text-align:    center;
           margin-top:    30px;
           margin-bottom: 30px;
-          color: rgb(200,0,0);
+          color: rgb(230, 46, 46);
         }
         > ._remember {
+          margin: 0px 6px;
           margin-top: 24px;
           > label > * {
             vertical-align: top;
