--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -397,8 +397,9 @@ div._systemStatus {
           border:     4px solid rgb(230, 46, 46);
           background: white;
           color:      rgb(230, 46, 46);
-          opacity:    .1;
+          opacity:    .05;
           &:hover {
+            border:     4px solid rgb(230, 46, 46);
             background: rgb(230, 46, 46);
             color:      white;
             opacity: 1;
