--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -502,6 +502,11 @@ div._systemStatus {
               border:     4px solid rgb(204, 237, 255);
             }
             color:      white;
+            &:not(:first-child) {
+              background: white;
+              color:      #33b1ff;
+              margin-left: auto;
+            }
           }
         }
         > ._labeledField, > ._line > ._labeledField {
