--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -19,9 +19,12 @@ body > div._blockEverything {
   left: 0px;
   height: 100%;
   width: 100%;
-  background: rgba(255,255,255,0.4);
+  background: rgba(0,0,0,.1);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+  @supports not ((backdrop-filter: blur(4px)) or (-webkit-backdrop-filter: blur(4px))) {
+    background: rgba(255,255,255,0.5)!important;
+  }
   @include user-select (none);
 }
 
@@ -83,8 +86,8 @@ body > ._search {
 div._systemStatus {
   opacity: 0;
   position: fixed;
-  right:   12px;
-  top:     60px;
+  right:   20px;
+  top:     20px;
   text-align: center;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
@@ -1148,11 +1151,11 @@ body > ._pleaseWait {
   position: fixed;
   height: 100vh;
   width: 100vw;
-  background: rgba(255,255,255,0.7);
-  backdrop-filter: blur(25px);
-  -webkit-backdrop-filter: blur(25px);
-  @supports not ((backdrop-filter: blur(25px)) or (-webkit-backdrop-filter: blur(25px))) {
-    background: rgba(255,255,255,0.94)!important;
+  background: rgba(0,0,0,.1);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  @supports not ((backdrop-filter: blur(4px)) or (-webkit-backdrop-filter: blur(4px))) {
+    background: rgba(255,255,255,0.5)!important;
   }
   > div {
     font-size: 48px;
