--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -414,6 +414,7 @@ div._systemStatus {
           margin-left: 16px;
           color: #33b1ff;
         }
+        &:nth-child(3) > input {width: 500px}
       }
       padding: 12px;
       border: solid 0.1px #aaa;
@@ -717,6 +718,7 @@ body > ._whiteout {
           margin-bottom: 12px;
           width: 270px;
         }
+        > #passwordHint {font-size: 16px}
         > ._loginButtons {
           margin-top: 32px;
           text-align: center;
