--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -1293,6 +1293,14 @@ body > ._landing {
       padding: 16px;
       font-weight: 500;
     }
+    > ._badBrowser {
+      margin-top: 48px;
+      margin-bottom: 48px;
+      font-size: 20px;
+      font-style: italic;
+      text-align: center;
+      color: #33b1ff;
+    }
   }
   > ._landingTable {
     > div {
