Normalize blur effect across browsers.

--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -422,9 +422,7 @@ $indent:       24px;
         @include user-select (none);
         position: relative;
         padding: 16px;
-        background: rgba(255,255,255,.80);
-        backdrop-filter: blur(4px);
-        -webkit-backdrop-filter: blur(4px);
+        @include backdrop-blur(4px, rgba(255,255,255,.80), rgba(255,255,255,.95));
         border-radius: 6px;
         box-shadow: $drop-shadow;
         color: #555;
