--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -49,6 +49,7 @@ table > tbody > tr > td > ._field > div > ._content {
     background: rgb(250,250,250);
     opacity: .9;
     color: rgb(180,180,180);
+    backgroud: red;
   }
 }
 
@@ -184,7 +185,7 @@ table > tbody > tr > td > ._field > div > ._content {
   right: 0px;
   z-index: 1;
   height: calc(100% - #{$tab-bar-height});
-  @include backdrop-blur(4px, rgba(160, 160, 155, 0.2), rgba(230, 230, 223, 0.7));
+  @include backdrop-blur(4px, rgba(160, 160, 155, 0.2), rgba(230, 230, 223, 0.9));
   position:fixed!important;
   margin-top: 0px!important;
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
