--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -493,6 +493,7 @@ div._TransactionHUD {
       max-width: 600px;
     }
     > ._buttons {
+      margin-right: 8px;
       position: absolute;
       top:   6px;
       right: 4px;
