--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -378,6 +378,14 @@ div._systemStatus {
     > ._content {
       > ._line {
         &:not(:last-child) {margin-bottom: 16px}
+        display: flex;
+        flex-direction: row;
+        &:last-child {
+          justify-content: space-between;
+        }
+        > div:not(:first-child) {
+          margin-left: 32px;
+        }
         > div {
           font-size: 18px;
           color:     #aaa;
@@ -385,13 +393,7 @@ div._systemStatus {
         > input {
           margin-right: 8px;
         }
-        > button:first-child {
-          background: #33b1ff;
-          color:      white;
-          border:     4px solid #33b1ff;
-        }
-        > button:nth-child(2) {
-          float:      right;
+        > button {
           border:     4px solid rgb(230, 46, 46);
           background: white;
           color:      rgb(230, 46, 46);
@@ -409,7 +411,10 @@ div._systemStatus {
           margin-left: 16px;
           color: #33b1ff;
         }
-        &:nth-child(3) > input {width: 500px}
+
+        > div > ._field_passwordHint > div > ._content {
+          width: 500px;
+        }
       }
       padding: 12px;
       border: solid 0.1px #aaa;
