--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -317,7 +317,7 @@ $indent:       24px;
       display: none;
     }
     &._field_notes ._content {
-      width: 150px;
+      width: 150px!important;
     }
   }
   > form > table {
