Resolve issue where two "Remaining" splits could never be deleted.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -169,6 +169,7 @@ body {
       min-height: 25px;
       > table > tbody > tr > td {
         padding: 0px;
+        padding-top: 1px;
       }
       > table > tbody > tr > td > ._field_name > div > ._content {
         font-size: 11px!important;
