--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -452,6 +452,7 @@ $indent:       24px;
           margin-top: 16px;
           > button {
             border:     4px solid #33b1ff;
+            padding:    4px!important;
             font-size:  16px;
             font-weight: 500;
             &:not(:last-child) {
