--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -487,7 +487,6 @@ div._systemStatus {
           padding-top: 6px;
           font-size: 28px;
           color: #33b1ff;
-          //font-weight: 300;
           padding-bottom: 8px;
         }
         > ._contentGroup {
@@ -501,9 +500,11 @@ div._systemStatus {
           margin-top: 12px;
           margin-right: 12px;
           > button {
+            padding: 4px!important;
             &:not(._disabled) {
               background: #33b1ff;
               border:     4px solid #33b1ff;
+              padding:    4px!important;
             }
             &._disabled       {
               background: rgb(204, 237, 255);
@@ -599,6 +600,7 @@ div._systemStatus {
         margin-top: 16px;
         > button {
           border:     4px solid #33b1ff;
+          padding:    4px!important;
           font-size:  16px;
           font-weight: 500;
           &:first-child {
@@ -749,6 +751,7 @@ body > ._whiteout {
           text-align: center;
           > button {
             border:     4px solid #33b1ff;
+            padding:    4px!important;
             font-size:  16px;
             font-weight: 500;
             &:first-child {
@@ -1111,60 +1114,6 @@ body > ._preferences_menu_head {
 
 .plus-icon:before {
   content: "+";
-}
-
-body > ._getConfigEncryptionPassword {
-  z-index: 999999;
-  top: 0px;
-  left: 0px;
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  background: white;
-  > div {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 6px;
-    border: 2px solid #80ceff;
-    width: 800px;
-    padding: 24px;
-    > div:first-child {
-      font-size: 22px;
-      color: #33b1ff;
-      margin-bottom: 20px;
-    }
-    > form {
-      > input {
-        font-size: 18px;
-        color: #888888;
-      }
-      > span {
-        margin-left: 20px;
-        font-size: 22px;
-        color: rgb(230, 46, 46);
-      }
-    }
-    > ._confirm {
-      margin-top: 20px;
-      > button:first-child {
-        border:     4px solid #33b1ff;
-        font-size:  16px;
-        font-weight: 500;
-        color:       white;
-        background:  #33b1ff;
-      }
-      > button:not(:first-child) {
-        margin-left: 32px;
-        border:     4px solid #33b1ff;
-        font-size:  16px;
-        font-weight: 500;
-        color:       #33b1ff;
-        background:  white;
-      }
-    }
-  }
 }
 
 body > ._pleaseWait {
